<resources>
    <string name="app_name">Android Intro</string>
    <string name="title_home">Home</string>
    <string name="title_age">Your age in:</string>
    <string name="title_map">Map</string>
    <string name="calculate">Calculate</string>
    <string name="default_age">You have 0 years</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="add_contact">Add Contact</string>
    <string name="birthdate">BirthDate:</string>
    <string name="address">Address:</string>
    <string name="tel">Tel:</string>
    <string name="selecttime">Select Time</string>
    <string name="set_alarm">Set Alarm</string>

    <string-array name="timeUnits">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>