<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="30dp"
        android:background="@drawable/age_border"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_user"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/etxtName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed" />

        <EditText
            android:id="@+id/etxtEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/etxtBirthDate"
            android:hint="@string/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <EditText
            android:id="@+id/etxtAddress"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            />

        <EditText
            android:id="@+id/etxtTel"
            android:hint="@string/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:maxLength="10"
            />

        <Button
            android:id="@+id/btnAddContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/age_border"
            android:backgroundTint="@color/purple_700"
            android:padding="15dp"
            android:text="@string/add_contact"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:textAllCaps="false"
            />

    </LinearLayout>
</LinearLayout>