<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name"
                android:padding="5dp"
                android:layout_margin="5dp"
                app:boxStrokeColor="@color/purple_500"
                />



            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/email"
                android:padding="5dp"
                android:layout_margin="5dp"
                app:boxStrokeColor="@color/purple_500"
                />

            <TextView
                android:id="@+id/txtBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/birthdate"
                android:gravity="right"
                android:padding="5dp"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/address"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/txtTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tel"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_delete"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>